--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
+\usepackage{cmap}
+\usepackage{graphicx}
 
 \title{History and Evolution of the Browser}
 \author{Felix Biedermann, Robert Philippsohn }
