--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -1,4 +1,5 @@
-\documentclass{article}
+\documentclass[runningheads]{llncs}
+
 \usepackage[utf8]{inputenc}
 \usepackage{cmap}
 \usepackage{graphicx}
