The first real sentences and a raw table of contents

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -5,13 +5,29 @@
 \usepackage{graphicx}
 
 \title{History and Evolution of the Browser}
+%
 \author{Felix Biedermann, Robert Philippsohn }
-\date{April 2019}
+%
+\institute{University of Stuttgart, Institute for Architecture of Application Systems \\
+Universitätsstraße 38, 70569 Stuttgart, Germany}
+
+%
 
 \begin{document}
 
 \maketitle
 
+\begin{abstract}
+	Summary of our paper (70-250 words)
+\end{abstract}
+
 \section{Introduction}
+
+\section{History}
+\subsection{The first browser}
+The first browser for the web was also an invention of the founder of the web, Tim Berners-Lee. The browser was called \textit{WorldWideWeb} and was introduced to the world in the year 1990. A few years later, in 1994, the Browser was renamed \textit{Nexus}.
+\section{Evolution}
+
+\section{Summery/Conclusion}
 
 \end{document}
