--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -25,7 +25,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 
 \section{History}
 \subsection{The first browser}
-The first browser for the web was also an invention of the founder of the web, Tim Berners-Lee. The browser was called \textit{WorldWideWeb} and was introduced to the world in the year 1990. A few years later, in 1994, the Browser was renamed \textit{Nexus}.
+The first browser for the web was also an invention of the founder of the web, Tim Berners-Lee. The browser was called \textit{WorldWideWeb} and was introduced to the world in the year 1990. A few years later, in 1994, the Browser was renamed \textit{Nexus}. The browser \textit{WorldWideWeb} was, a part of the fact that it was the first browser, also the first HTML editor.
 \section{Evolution}
 
 \section{Summery/Conclusion}
