--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -30,7 +30,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 The first browser for the web was also an invention of the founder of the web, Tim Berners-Lee. The browser was called \textit{WorldWideWeb} and was introduced to the world in the year 1990. A few years later, in 1994, the Browser was renamed \textit{Nexus}. The browser \textit{WorldWideWeb} was, a part of the fact that it was the first browser, also the first HTML editor.
 To view pictures you had to follow the link of the picture, download it and open it on the computer. Another browser with an diffenrent name but a similar functionality was \textit{Lynx}, which was published 1992 by Thomas Dickey.
 \subsection{Other early browsers}
-When the Web was published Tim Berners-Lee wanted his invention to succeed. To ensure the success he knew he needed more people to get interested. He needed as many developers as possible to work on web based projects, so there is a constant flow of new content, and he needed the general public to get occupied with the web to make it a long lasting success. For that reason Tim Berners-Lee helped many project that tried to produce new graphical based browsers. 
+When the Web was published Tim Berners-Lee wanted his invention to succeed. To ensure the success he knew he needed more people to get interested. He needed as many developers as possible to work on web based projects, so there is a constant flow of new content, and he needed the general public to get occupied with the web to make it a long lasting success. For that reason Tim Berners-Lee helped many project that tried to produce new graphical based browsers. In the year 1992 many browser were invented by students as small projects with exactly that goal, were \textit{ViolaWWW} or otherwise called \textit{Viola} was one of the most prominent. But not long after \textit{Viola} came a new competitor. 
 \section{Evolution}
 
 \section{Summery/Conclusion}
