--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -32,7 +32,7 @@ To view pictures you had to follow the link of the picture, download it and open
 \subsection{First graphical browsers}
 When the Web was published Tim Berners-Lee wanted his invention to succeed. To ensure the success he knew he needed more people to get interested. He needed as many developers as possible to work on web based projects, so there is a constant flow of new content, and he needed the general public to get occupied with the web to make it a long lasting success. For that reason Tim Berners-Lee helped many project that tried to produce new graphical based browsers. In the year 1992 many browser were invented by students as small projects with exactly that goal, were \textit{ViolaWWW} or otherwise called \textit{Viola} was one of the most prominent and \textit{Erwise} was one of the lesser known graphical browsers. But not long after \textit{Viola} came a new competitor. \\This new browser was \textit{Mosaic}.
 \subsection{Mosaic}
-In January 1993 \textit{Mosaic} was published for free and its distribution numbers skyrocketed. Marc Andreessen and Eric Bina, the developers of the \textit{Mosaic} browser, constructed the browser with the intention that a broader audience could use the World Wide Web. 
+In January 1993 \textit{Mosaic} was published for free and its distribution numbers skyrocketed. Marc Andreessen and Eric Bina, the developers of the \textit{Mosaic} browser, constructed the browser with the intention that a broader audience could use the World Wide Web. That was only possible when the team of NCSA engineers would make their browser accessable for other systems than Unix. Andreessen and Bina, together with some of their NCSA associates, work on the versions for Mac and PC which came out in late spring of the same year. With this the user numbers of \textit{Mosaic} rose even higher, with 5000 downloads per month.
 \section{Evolution}
 
 \section{Summery/Conclusion}
