Restructering the folder structre and added remaining sections from our brainstorming map

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -35,6 +35,10 @@ When the Web was published Tim Berners-Lee wanted his invention to succeed. To e
 In January 1993 \textit{Mosaic} was published for free and its distribution numbers skyrocketed. Marc Andreessen and Eric Bina, the developers of the \textit{Mosaic} browser, constructed the browser with the intention that a broader audience could use the World Wide Web. That was only possible when the team of NCSA engineers would make their browser accessable for other systems than Unix. Andreessen and Bina, together with some of their NCSA associates, work on the versions for Mac and PC which came out in late spring of the same year. With this the user numbers of \textit{Mosaic} rose even higher, with 5000 downloads per month.
 \section{Evolution}
 
+\section{Future of the Browser}
+
+\section{Evaluation}
+
 \section{Summery/Conclusion}
 
 \end{document}
