--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -34,7 +34,27 @@ When the Web was published Tim Berners-Lee wanted his invention to succeed. To e
 \subsection{Mosaic}
 In January 1993 \textit{Mosaic} was published for free and its distribution numbers skyrocketed. Marc Andreessen and Eric Bina, the developers of the \textit{Mosaic} browser, constructed the browser with the intention that a broader audience could use the World Wide Web. That was only possible when the team of NCSA engineers would make their browser accessable for other systems than Unix. Andreessen and Bina, together with some of their NCSA associates, worked on the versions for Mac and PC which came out in late spring of the same year. With this the user numbers of \textit{Mosaic} rose even higher, with 5000 downloads per month. After the graduation of Marc Andreessen and Eric Bina they met James H. Clark, the founde of Silicon Graphics, and discussed how to make the Web commercialisable. That set the starting point for an new Browser called \textit{Netscape}. So Andreessen and Bina left NCSA, with some of their colleagues, in 1994 and settled down in Silicon Valley. After the 2 left the NCSA assigned all commercial rights for \textit{Mosaic} to Spyglass, Inc. Spyglass licensed their technology to many other companies, including Microsoft. In the year 1997 the NCSA discontinued the support for the \textit{Mosaic}, shifting their research focus to other developments projects. The last release for the \textit{Mosaic} browser dates back to August 1997.
 \subsection{Netscape}
+\subsection{Important Personalities}
+
 \section{Evolution}
+\subsection{Patches}
+\subsubsection{HTML}
+\subsubsection{Cookies}
+\subsubsection{CSS}
+\subsubsection{SSL}
+\subsubsection{Java}
+\subsubsection{Scripting}
+\subsubsection{SVG}
+\subsection{Features}
+\subsubsection{History}
+\subsubsection{Incognito mode}
+\subsubsection{Bookmark}
+\subsubsection{Browser Addons}
+\subsubsection{Tabs ?}
+\subsubsection{Browser Chache}
+
+
+\section{Browsers nowadays (compared)}
 
 \section{Future of the Browser}
 
