Added more Patches

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -44,6 +44,8 @@ In January 1993 \textit{Mosaic} was published for free and its distribution numb
 \subsubsection{SSL}
 \subsubsection{Java}
 \subsubsection{Scripting}
+\subsubsection{Web Services}
+\subsubsection{Semantic Web}
 \subsubsection{SVG}
 \subsection{Features}
 \subsubsection{History}
