--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -32,6 +32,8 @@ In January 1993 \textit{Mosaic} was published for free and its distribution numb
 \subsection{Netscape}
 \textit{Netscape} marks the beginning of many important things, that shaped the idea of the browser we know today. The first version of the browser was launched in October 1994 and was programmed by the NCSA team of Andreessen and Bina, that they acquired. In the beginning the team was not sure how to earn money with their browser, but later on their browser marked the end of research-project status of the Web and started the era of the Web of commercial interest and exploitation. The Browser also invented the cookie feature, what lets the browser save data, and the Secure Socket Layer (SSL), what protects the privacy  and integrity of transactions. The first browser was the \textit{Mosaic Netscape} release 0.9. Because of problems with the name the company adapted the name \textit{Netscape Communications} and launched by the end of december the \textit{Netscape Navigator 1.0}, what also solved the problem with the name conflict regarding the NCSA Mosaic browser.
 \\Because of the few competetors in the field of browsers, \textit{Netscape} became the most popular browser in a short time. The main income for the company was throught B2B-business and the stock markets. Espacially the stock markets were lucrative, because on the first day (August 9th, 1995) their stock price rose from 28\$ per share to a high of 74.75\$ and at the end of the day they closed off with 58.25\$. That was a greet sign and it didn't end their; yet. They rose in popularity, until Microsoft started competing in the Web sector. With Microsoft and Netscape Communications the browser wars started.
+\subsection{Internet Explorer}
+
 \subsection{Important Personalities}
 1. Tim Berners-Lee\\
 2. Marc Andreessen\\
