Added some text to patch

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -20,7 +20,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 
 \clearpage
 \section{Introduction}
-
+\subsection{What is a Browser}
 \section{History}
 \subsection{The first browsers}
 The first browser for the web was also an invention of the founder of the web, Tim Berners-Lee. The browser was called \textit{WorldWideWeb} and was introduced to the world in the year 1990. A few years later, in 1994, the Browser was renamed \textit{Nexus}. The browser \textit{WorldWideWeb} was, a part of the fact that it was the first browser, also the first HTML editor.
@@ -37,8 +37,9 @@ In January 1993 \textit{Mosaic} was published for free and its distribution numb
 2. Marc Andreessen\\
 3. Bill Gates\\
 \section{Evolution}
-\subsection{Patches}
-\subsubsection{HTML}
+\subsection{How Patches influenced Browsers}
+\begin{quote}``I call such changes patches, as they are attempts to fix the original design of the web'' Marco Aiello The Web was Done by AmateursS. 65\end{quote}
+With changing the Web, patches automatically changed and influenced Browsers when they were introduced. In this capital we will have a short summary of what these patches were and how browsers evolved and adpaped to these changes 
 \subsubsection{Cookies}
 \subsubsection{SSL}
 \subsubsection{CSS}
@@ -47,9 +48,10 @@ In January 1993 \textit{Mosaic} was published for free and its distribution numb
 \subsubsection{Web Services}
 \subsubsection{Semantic Web}
 \subsubsection{SVG}
-\subsection{Technological Changes}
-\subsubsection{HTTPS}
+\subsection{Basic Technological Changes}
+\subsubsection{HTTP}
 \subsubsection{HTML}
+\subsubsection{URL}
 \subsection{Features}
 \subsubsection{History}
 \subsubsection{Incognito mode}
