Wrote more on IE and deleted Browser Wars subsection

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -14,64 +14,64 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 
 \maketitle
 
-\begin{abstract}
-	Summary of our paper (70-250 words)
-\end{abstract}
+	\begin{abstract}
+		Summary of our paper (70-250 words)
+	\end{abstract}
 
 \clearpage
-\section{Introduction}
-\subsection{What is a Browser}
-\section{History}
-\subsection{The first browsers}
-The first browser for the web was also an invention of the founder of the web, Tim Berners-Lee. The browser was called \textit{WorldWideWeb} and was introduced to the world in the year 1990. A few years later, in 1994, the Browser was renamed \textit{Nexus}. The browser \textit{WorldWideWeb} was, a part of the fact that it was the first browser, also the first HTML editor.
-To view pictures you had to follow the link of the picture, download it and open it on the computer. Another browser with an diffenrent name but a similar functionality was \textit{Lynx}, which was published 1992 by Thomas Dickey.
-\subsection{First graphical browsers}
-When the Web was published Tim Berners-Lee wanted his invention to succeed. To ensure the success he knew he needed more people to get interested. He needed as many developers as possible to work on web based projects, so there is a constant flow of new content, and he needed the general public to get occupied with the web to make it a long lasting success. For that reason Tim Berners-Lee helped many project that tried to produce new graphical based browsers. In the year 1992 many browser were invented by students as small projects with exactly that goal, were \textit{ViolaWWW} or otherwise called \textit{Viola} was one of the most prominent and \textit{Erwise} was one of the lesser known graphical browsers. But not long after \textit{Viola} came a new competitor. \\This new browser was \textit{Mosaic}.
-\subsection{Mosaic}
-In January 1993 \textit{Mosaic} was published for free and its distribution numbers skyrocketed. Marc Andreessen and Eric Bina, the developers of the \textit{Mosaic} browser, constructed the browser with the intention that a broader audience could use the World Wide Web. That was only possible when the team of NCSA engineers would make their browser accessable for other systems than Unix. Andreessen and Bina, together with some of their NCSA associates, worked on the versions for Mac and PC which came out in late spring of the same year. With this the user numbers of \textit{Mosaic} rose even higher, with 5000 downloads per month. After the graduation of Marc Andreessen and Eric Bina they met James H. Clark, the founde of Silicon Graphics, and discussed how to make the Web commercialisable. That set the starting point for an new Browser called \textit{Netscape}. So Andreessen and Bina left NCSA, with some of their colleagues, in 1994 and settled down in Silicon Valley. After the 2 left the NCSA assigned all commercial rights for \textit{Mosaic} to Spyglass, Inc. Spyglass licensed their technology to many other companies, including Microsoft. In the year 1997 the NCSA discontinued the support for the \textit{Mosaic}, shifting their research focus to other developments projects. The last release for the \textit{Mosaic} browser dates back to August 1997.
-\subsection{Netscape}
-\textit{Netscape} marks the beginning of many important things, that shaped the idea of the browser we know today. The first version of the browser was launched in October 1994 and was programmed by the NCSA team of Andreessen and Bina, that they acquired. In the beginning the team was not sure how to earn money with their browser, but later on their browser marked the end of research-project status of the Web and started the era of the Web of commercial interest and exploitation. The Browser also invented the cookie feature, what lets the browser save data, and the Secure Socket Layer (SSL), what protects the privacy  and integrity of transactions. The first browser was the \textit{Mosaic Netscape} release 0.9. Because of problems with the name the company adapted the name \textit{Netscape Communications} and launched by the end of december the \textit{Netscape Navigator 1.0}, what also solved the problem with the name conflict regarding the NCSA Mosaic browser.
-\\Because of the few competetors in the field of browsers, \textit{Netscape} became the most popular browser in a short time. The main income for the company was throught B2B-business and the stock markets. Espacially the stock markets were lucrative, because on the first day (August 9th, 1995) their stock price rose from 28\$ per share to a high of 74.75\$ and at the end of the day they closed off with 58.25\$. That was a greet sign and it didn't end their; yet. They rose in popularity, until Microsoft started competing in the Web sector. With Microsoft and Netscape Communications the browser wars started.
-\subsection{Internet Explorer}
-\textit{Internet Explorer 1.0} (furthemore called IE) was the first attempt of Microsoft on 17 August 1995 to dethrone Netscape as the market leader on the browser territorium. For the first 2 versions of IE, Microsoft used the licensed code of Spyglass Inc. ,from \textit{Mosaic}, as a starting point. 
-\subsection{Important Personalities}
-1. Tim Berners-Lee\\
-2. Marc Andreessen\\
-3. Bill Gates\\
-\section{Evolution}
-\subsection{How Patches influenced Browsers}
-\begin{quote}``I call such changes patches, as they are attempts to fix the original design of the web'' Marco Aiello The Web was Done by Amateurs S. 65\end{quote}
-By changing the Web, patches also influenced browsers when they were introduced. In this chapter we will have a short summary of what these patches were and how browsers evolved and adpaped through these changes.
-\subsubsection{Cookies}
-Like 
-\subsubsection{Cookies}
-\subsubsection{SSL}
-\subsubsection{CSS}
-\subsubsection{Java}
-\subsubsection{Scripting}
-\subsubsection{Web Services}
-\subsubsection{Semantic Web}
-\subsubsection{SVG}
-\subsection{Basic Technological Changes}
-\subsubsection{HTTP}
-\subsubsection{HTML}
-\subsubsection{URL}
-\subsection{Features}
-\subsubsection{History}
-\subsubsection{Incognito mode}
-\subsubsection{Bookmark}
-\subsubsection{Browser Addons}
-\subsubsection{Tabs ?}
-\subsubsection{Browser Chache}
+	\section{Introduction}
+		\subsection{What is a Browser}
+	\section{History}
+		\subsection{The first browsers}
+		The first browser for the web was also an invention of the founder of the web, Tim Berners-Lee. The browser was called \textit{WorldWideWeb} and was introduced to the world in the year 1990. A few years later, in 1994, the Browser was renamed \textit{Nexus}. The browser \textit{WorldWideWeb} was, a part of the fact that it was the first browser, also the first HTML editor.
+		To view pictures you had to follow the link of the picture, download it and open it on the computer. Another browser with an diffenrent name but a similar functionality was \textit{Lynx}, which was published 1992 by Thomas Dickey.
+		\subsection{First graphical browsers}
+		When the Web was published Tim Berners-Lee wanted his invention to succeed. To ensure the success he knew he needed more people to get interested. He needed as many developers as possible to work on web based projects, so there is a constant flow of new content, and he needed the general public to get occupied with the web to make it a long lasting success. For that reason Tim Berners-Lee helped many project that tried to produce new graphical based browsers. In the year 1992 many browser were invented by students as small projects with exactly that goal, were \textit{ViolaWWW} or otherwise called \textit{Viola} was one of the most prominent and \textit{Erwise} was one of the lesser known graphical browsers. But not long after \textit{Viola} came a new competitor. \\This new browser was \textit{Mosaic}.
+		\subsection{Mosaic}
+		In January 1993 \textit{Mosaic} was published for free and its distribution numbers skyrocketed. Marc Andreessen and Eric Bina, the developers of the \textit{Mosaic} browser, constructed the browser with the intention that a broader audience could use the World Wide Web. That was only possible when the team of NCSA engineers would make their browser accessable for other systems than Unix. Andreessen and Bina, together with some of their NCSA associates, worked on the versions for Mac and PC which came out in late spring of the same year. With this the user numbers of \textit{Mosaic} rose even higher, with 5000 downloads per month. After the graduation of Marc Andreessen and Eric Bina they met James H. Clark, the founde of Silicon Graphics, and discussed how to make the Web commercialisable. That set the starting point for an new Browser called \textit{Netscape}. So Andreessen and Bina left NCSA, with some of their colleagues, in 1994 and settled down in Silicon Valley. After the 2 left the NCSA assigned all commercial rights for \textit{Mosaic} to Spyglass, Inc. Spyglass licensed their technology to many other companies, including Microsoft. In the year 1997 the NCSA discontinued the support for the \textit{Mosaic}, shifting their research focus to other developments projects. The last release for the \textit{Mosaic} browser dates back to August 1997.
+		\subsection{Netscape}
+		\textit{Netscape} marks the beginning of many important things, that shaped the idea of the browser we know today. The first version of the browser was launched in October 1994 and was programmed by the NCSA team of Andreessen and Bina, that they acquired. In the beginning the team was not sure how to earn money with their browser, but later on their browser marked the end of research-project status of the Web and started the era of the Web of commercial interest and exploitation. The Browser also invented the cookie feature, what lets the browser save data, and the Secure Socket Layer (SSL), what protects the privacy  and integrity of transactions. The first browser was the \textit{Mosaic Netscape} release 0.9. Because of problems with the name the company adapted the name \textit{Netscape Communications} and launched by the end of december the \textit{Netscape Navigator 1.0}, what also solved the problem with the name conflict regarding the NCSA Mosaic browser.
+		\\Because of the few competetors in the field of browsers, \textit{Netscape} became the most popular browser in a short time. The main income for the company was throught B2B-business and the stock markets. Espacially the stock markets were lucrative, because on the first day (August 9th, 1995) their stock price rose from 28\$ per share to a high of 74.75\$ and at the end of the day they closed off with 58.25\$. That was a greet sign and it didn't end their; yet. They rose in popularity, until Microsoft started competing in the Web sector. With Microsoft and Netscape Communications the browser wars started.
+		\subsection{Internet Explorer}
+		\textit{Internet Explorer 1.0} (furthemore called IE) was the first attempt of Microsoft on 17 August 1995 to dethrone Netscape as the market leader on the browser territorium. For the first 2 versions of IE, Microsoft used the licensed code of Spyglass Inc. ,from \textit{Mosaic}, as a starting point. The first version that was mostly independently made in the company, would be IE 3.0. It introduced as the first browser ever CSS and it was the first version that did not use the Spyglass source code; only Spyglass technology. It was also the first true competetor for \textit{Netscape}. The following years would become known as the \textbf{Browser Wars} between Netscape and IE, where both parties would improve their browser in a rapid pace. 
+		\subsection{Important Personalities}
+		1. Tim Berners-Lee\\
+		2. Marc Andreessen\\
+		3. Bill Gates\\
+	\section{Evolution}
+		\subsection{How Patches influenced Browsers}
+			\begin{quote}``I call such changes patches, as they are attempts to fix the original design of the web'' Marco Aiello The Web was Done by Amateurs S. 65 \end{quote}
+		By changing the Web, patches also influenced browsers when they were introduced. In this chapter we will have a short summary of what these patches were and how browsers evolved and adpaped through these changes.
+			\subsubsection{Cookies}
+			Like 
+			\subsubsection{Cookies}
+			\subsubsection{SSL}
+			\subsubsection{CSS}
+			\subsubsection{Java}
+			\subsubsection{Scripting}
+			\subsubsection{Web Services}
+			\subsubsection{Semantic Web}
+			\subsubsection{SVG}
+		\subsection{Basic Technological Changes}
+			\subsubsection{HTTP}
+			\subsubsection{HTML}
+			\subsubsection{URL}
+			\subsection{Features}
+			\subsubsection{History}
+			\subsubsection{Incognito mode}
+			\subsubsection{Bookmark}
+			\subsubsection{Browser Addons}
+			\subsubsection{Tabs ?}
+			\subsubsection{Browser Chache}
 
 
-\section{Browsers nowadays (compared)}
+	\section{Browsers nowadays (compared)}
 
-\section{Future of the Browser}
-\subsection{Quantentechik?}
+	\section{Future of the Browser}
+		\subsection{Quantentechik?}
 
-\section{Evaluation}
+	\section{Evaluation}
 
-\section{Summery/Conclusion}
+	\section{Summery/Conclusion}
 
 \end{document}
