Removed questionmark and deleted on cookie section

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -44,7 +44,6 @@ In January 1993 \textit{Mosaic} was published for free and its distribution numb
 By changing the Web, patches also influenced browsers when they were introduced. In this chapter we will have a short summary of what these patches were and how browsers evolved and adpaped through these changes.
 \subsubsection{Cookies}
 Like 
-\subsubsection{Cookies}
 \subsubsection{SSL}
 \subsubsection{CSS}
 \subsubsection{Java}
@@ -61,7 +60,7 @@ Like
 \subsubsection{Incognito mode}
 \subsubsection{Bookmark}
 \subsubsection{Browser Addons}
-\subsubsection{Tabs ?}
+\subsubsection{Tabs}
 \subsubsection{Browser Chache}
 
 
@@ -69,6 +68,7 @@ Like
 
 \section{Future of the Browser}
 \subsection{Quantentechik?}
+\subsection{Devices}
 
 \section{Evaluation}
 
