Deleted Web Services, new subsection 'Future based on past gues' based on prof

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -48,8 +48,6 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			\subsubsection{CSS}
 			\subsubsection{Java}
 			\subsubsection{Scripting}
-			\subsubsection{Web Services}
-			\subsubsection{Semantic Web}
 			\subsubsection{SVG}
 		\subsection{Basic Technological Changes}
 			\subsubsection{HTTP}
@@ -69,13 +67,15 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 
 
 	\section{Browsers nowadays (compared)}
-
+	%Prof meinte guter Fokus. 
 	\section{Future of the Browser}
+		\subsection{Future based on past guess}
 		\subsection{Quantentechik?}
 		\subsection{Devices}
 
 	\section{Evaluation}
 
 	\section{Summery/Conclusion}
+	\section{Sources}
 
 \end{document}
