--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -5,6 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{cmap}
 \usepackage{graphicx}
+\graphicspath{{./Bilder/}}
 
 \title{History and Evolution of the Browser}
 \author{Felix Biedermann, Robert Philippsohn, Jonas Morela}
@@ -38,6 +39,11 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\textit{Internet Explorer 1.0} (furthemore called IE) was the first attempt of Microsoft on 17 August 1995 to dethrone Netscape as the market leader on the browser territorium. For the first 2 versions of IE, Microsoft used the licensed code of Spyglass Inc. ,from \textit{Mosaic}, as a starting point. The first version that was mostly independently made in the company, would be IE 3.0. It introduced as the first browser ever CSS and it was the first version that did not use the Spyglass source code; only Spyglass technology. It was also the first true competetor for \textit{Netscape}. The following years would become known as the \textbf{Browser Wars} between Netscape and IE, where both parties would improve their browser in a rapid pace. The tides turned with IE 4.0, where Microsoft changed their strategy. Before IE 4.0 their browser was a free browser for the home, like Netscape, but Microsofts' browser was interferior in technology and had to be installed first, before you could use it. But IE 4.0 shipped with all Windows and Macintosh PCs', means the first browser most people interacted with after they bought a new PC was IE and not Netscape. With that IE dethroned Netscape as the most used browser and send Netscape into the depths of nothingness. After the defeat of Netscape the development of Microsofts browser slacked down after the release of IE 6.0 in 2001. But this error made it possible for new competetors to emerge and evolve.
 		\subsection{Mozilla Firefox}
 		\textit{Mozilla Firefox}, originally called Phoenix or Firebird, is an unoffical offspring of Netscape created in the year 1998. The first version of Firefox, Firefox 1.0, was released in 2004. Firefox and its predecessor were created on the bases of the Netscape source code, which was published on march 31, 1998. 
+		\subsection{Opera}
+		\subsection{Safari}
+		\subsection{Google Chrome}
+		\subsection{Timeline of all browsers}		\includegraphics{TimelineOfWebBrowsers.png} 
+		A timeline of all browsers and browser versions ever made. [1]
 		\subsection{Important Personalities}
 		1. Tim Berners-Lee\\
 		2. Marc Andreessen\\
@@ -81,5 +87,6 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 
 	\section{Summery/Conclusion}
 	\section{Sources}
+	[1] $https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Timeline\_of\_web\_browsers.svg/3560px-Timeline\_of\_web\_browsers.svg.png$
 
 \end{document}
