--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -22,6 +22,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\section{Introduction}
 		\subsection{What is a Browser}
 		A browser is software that is used to access the internet. A browser lets you visit websites and do activities within them like login, view multimedia, link from one site to another, visit one page from another, print, send and receive email, among many other activities. The most common browser software titles on the market are: Microsoft Internet Explorer, Google's Chrome, Mozilla Firefox, Apple's Safari, and Opera. Browser availability depends on the operating system your computer is using (for example: Microsoft Windows, Linux, Ubuntu, Mac OS, among others).
+		\subsection{What does a Browser do?}
 	\section{History}
 		\subsection{The first browsers}
 		The first browser for the web was also an invention of the founder of the web, Tim Berners-Lee. The browser was called \textit{WorldWideWeb} and was introduced to the world in the year 1990. A few years later, in 1994, the Browser was renamed \textit{Nexus}. The browser \textit{WorldWideWeb} was, a part of the fact that it was the first browser, also the first HTML editor.
@@ -40,11 +41,15 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		2. Marc Andreessen\\
 		3. Bill Gates\\
 	\section{Evolution}
+		\subsection{The meaning of Evolution}
+		With every new browser and browser version being released features and improvment have been added. Browsers became more secure, user and developer friendly, and more efficient. These were implemented because of new technologies, bugs being discovered and in trying to run out the competition. If you add all of the changes to a timeline you can overview the Evolution of the browser.
+		%Evolution of the browser Website pic
 		\subsection{How Patches influenced Browsers}
 			\begin{quote}``I call such changes patches, as they are attempts to fix the original design of the web'' Marco Aiello The Web was Done by Amateurs S. 65 \end{quote}
 		By changing the Web, patches also influenced browsers when they were introduced. In this chapter we will have a short summary of what these patches were and how browsers evolved and adpaped through these changes.
 			\subsubsection{Cookies}
-			Like
+			Like mentioned before Cookies were introduced with Netscape in 1994 for websites to be able to save data to be remembered for processes on the clients side. The original idea The webbrowser is being used by the server of the website to save textinformation on the Computer of the client. These have made it possible to save login and shopping cart informations but also made Webtracking possible. Later they received critizism for being able to damage the users privacy and threadening security when surfing the web. Under the EU's GDPR Law websites are now forced now ask and inform users about saving data in their Browser.
+			%http cookie wikipedia english/german and Book 
 			\subsubsection{SSL}
 			\subsubsection{CSS}
 			\subsubsection{Java}
