started working on the history of the other browsers (opera, google and Safari)

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -1,4 +1,3 @@
-
 \documentclass[runningheads]{llncs}
 
 \bibliographystyle{splncs04}
@@ -41,8 +40,11 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{Mozilla Firefox}
 		\textit{Mozilla Firefox}, originally called Phoenix or Firebird, is an unoffical offspring of Netscape created in the year 1998. The first version of Firefox, Firefox 1.0, was released in 2004. Firefox and its predecessor were created on the bases of the Netscape source code, which was published on march 31, 1998. 
 		\subsection{Opera}
+		\textit{Opera} is one of the oldest browsers we have nowadays, next to IE. \textit{Opera 1.0} was first released in the year 1995. It was not as widely used as Netscape or IE, but it gained popularity with time. The intention was to build a fast browser on any system. That is why it was build from scratch and not based on the Mosaic code (like IE and Netscape). But Opera gained popularity with version 2.1, which was in the on 9 December 1996 and introduced feateures like keyboard shortcuts, zoom and sessions.
 		\subsection{Safari}
+		\textit{Safari} is a browser exclusivly developed for iOS and was released 2003. Initially it was published on Mac desktop systems, later on version 3,4 and 5 were also published on Windows, but after the 5th version not further supported. The browser was released on the mobile devices of Apple Inc. in the year 2007. The current version is 12.1.
 		\subsection{Google Chrome}
+		It was rumored in 2004 that Google was working on a browser, but the development only began in the year 2006. The reason why Google wanted to do their own browser, was because the other options at this time were not that satisfying. The first version was released in 2008 and gained immense popularity. In the year 2012 even surpassed IE in the market share race and since then is dominating the 2nd browser wars and is slowly winning as well.
 		\subsection{Timeline of all browsers}		\includegraphics{TimelineOfWebBrowsers.png} 
 		A timeline of all browsers and browser versions ever made. [1]
 		\subsection{Important Personalities}
