Started writing on future of the browser

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -85,7 +85,11 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\section{Browsers nowadays (compared)}
 	%Prof meinte guter Fokus. 
 	\section{Future of the Browser}
+	Nowadays there are already many ways to interact with a browser which seem rather futuristic. You can controll via voice, by hand gestures and even by just looking with your eyes. You are not just having you browser on your Computer but also on your phone, your watch and floating in the air infront of you.
+	%Pic of alexa, firefox vr, eye study 
 		\subsection{Future based on past guess}
+		\subsection{Browsers becoming operating systems}
+		One of Alan Kay's main crizisms about the Web is the absence of an computational abilty for the browser
 		\subsection{Quantentechik?}
 		\subsection{Devices}
 
