worked more on firefox

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -39,9 +39,9 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{Internet Explorer}
 		\textit{Internet Explorer 1.0} (furthemore called IE) was the first attempt of Microsoft on 17 August 1995 to dethrone Netscape as the market leader on the browser territorium. For the first 2 versions of IE, Microsoft used the licensed code of Spyglass Inc. ,from \textit{Mosaic}, as a starting point. The first version that was mostly independently made in the company, would be IE 3.0. It introduced as the first browser ever CSS and it was the first version that did not use the Spyglass source code; only Spyglass technology. It was also the first true competetor for \textit{Netscape}. The following years would become known as the \textbf{Browser Wars} between Netscape and IE, where both parties would improve their browser in a rapid pace. The tides turned with IE 4.0, where Microsoft changed their strategy. Before IE 4.0 their browser was a free browser for the home, like Netscape, but Microsofts' browser was interferior in technology and had to be installed first, before you could use it. But IE 4.0 shipped with all Windows and Macintosh PCs', means the first browser most people interacted with after they bought a new PC was IE and not Netscape. With that IE dethroned Netscape as the most used browser and send Netscape into the depths of nothingness. After the defeat of Netscape the development of Microsofts browser slacked down after the release of IE 6.0 in 2001. But this error made it possible for new competetors to emerge and evolve.
 		\subsection{Mozilla Firefox}
-		\textit{Mozilla Firefox}, originally called Phoenix or Firebird, is an unoffical offspring of Netscape created in the year 1998. The first version of Firefox, Firefox 1.0, was released in 2004. Firefox and its predecessor were created on the bases of the Netscape source code, which was published on march 31, 1998. 
+		\textit{Mozilla Firefox}, originally called Phoenix or Firebird, is the unoffical offspring of Netscape created in the year 1998. The first version of Firefox, Firefox 1.0, was released on November, 9th 2004. Shortly before the release of the first full version Mozilla gained a bunch of new users, because of the warning from the US goverment against the exploit in IE. Firefox and its predecessor were created on the bases of the Netscape source code, which was published on march 31, 1998 in the attempt of Netscape Communications to get more programmers that could improve the code and help defeat Microsoft in the the \textbf{Browser Wars}. Unfortunately that didn't save Netscape. But it does not mean that Mozilla Firefox was going down with Netscape. The reason was, the source code was online freely available and had a flourishing communitiy.
 		\subsection{Opera}
-		\textit{Opera} is one of the oldest browsers we have nowadays, next to IE. \textit{Opera 1.0} was first released in the year 1995. It was not as widely used as Netscape or IE, but it gained popularity with time. The intention was to build a fast browser on any system. That is why it was build from scratch and not based on the Mosaic code (like IE and Netscape). But Opera gained popularity with version 2.1, which was in the on 9 December 1996 and introduced feateures like keyboard shortcuts, zoom and sessions.
+		\textit{Opera} is one of the oldest browsers we have nowadays, next to IE. \textit{Opera 1.0} was first released in the year 1995. It was not as widely used as Netscape or IE, but it gained popularity with time. The intention was to build a fast browser on any system. That is why it was build from scratch and not based on the Mosaic code (like IE and Netscape). But \textit{Opera} gained popularity with version 2.1, which was in the on 9 December 1996 and introduced feateures like keyboard shortcuts, zoom and sessions.
 		\subsection{Safari}
 		\textit{Safari} is a browser exclusivly developed for iOS and was released 2003. Initially it was published on Mac desktop systems, later on version 3,4 and 5 were also published on Windows, but after the 5th version not further supported. The browser was released on the mobile devices of Apple Inc. in the year 2007. The current version is 12.1.
 		\subsection{Google Chrome}
